plugins {
    id 'java'
    id 'application'
    id 'checkstyle'
}

group = 'com.littlepay'
version = '0.1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    mainClass = 'com.littlepay.Main'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.apache.commons:commons-csv:1.11.0'
    implementation 'org.slf4j:slf4j-api:2.0.13'
    runtimeOnly 'org.slf4j:slf4j-simple:2.0.13'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.3'
    testImplementation 'org.assertj:assertj-core:3.26.3'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

checkstyle {
    toolVersion = '10.21.4'
    configFile = file('config/checkstyle/checkstyle.xml')
    configProperties['org.checkstyle.google.suppressionfilter.config'] =
            file('config/checkstyle/checkstyle-suppressions.xml').absolutePath
    ignoreFailures = false
    maxWarnings = 0
}

test {
    useJUnitPlatform()
}

// Fat-JAR: include all runtime dependencies
jar {
    archiveBaseName = 'littlepay'
    archiveVersion = ''
    manifest {
        attributes 'Main-Class': 'com.littlepay.Main'
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}
